[package]
name = "api"
version = "0.5.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.1"
actix-session = "0.4"
hex = "0.4.2"
diesel_migrations = "1.4"
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono"]}
log = "0.4"
env_logger = "0.8"
dotenv = "0.15"
futures = "0.3.8"
r2d2 = "0.8"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "*", features = ["serde"] }
serenity = { version = "0.9.1", features = ["model"] }
reqwest = { version = "0.10", features = ["json"]}
